<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="11dp"
    tools:context=".mainfragments.HomeFragment">

    <ImageButton
        android:id="@+id/menu_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/logo" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toStartOf="@id/profile_photo_card_view"
        app:layout_constraintStart_toEndOf="@id/menu_button"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_photo_card_view"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="29dp"
        app:cardCornerRadius="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/logo">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="250dp">

            <ImageView
                android:id="@+id/profile_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:contentDescription="@string/profile_photo"
                android:scaleType="centerCrop"
                android:src="@drawable/profile_photo" />
        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/location_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins400"
        android:text="@string/location"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:icon="@drawable/ic_down_arrow"
        app:iconGravity="textEnd"
        app:iconTint="@null"
        app:layout_constraintEnd_toEndOf="@id/profile_photo_card_view"
        app:layout_constraintStart_toStartOf="@id/profile_photo_card_view"
        app:layout_constraintTop_toBottomOf="@id/profile_photo_card_view" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="menu_button,location_button,logo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier_header">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/search_input_layout"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_edit_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/category_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_input_layout"
                tools:itemCount="1"
                tools:listitem="@layout/category_item" />

            <TextView
                android:id="@+id/latest_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="29dp"
                android:fontFamily="@font/poppins500"
                android:text="@string/latest"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/category_recycler" />

            <TextView
                android:id="@+id/view_all_lastest_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/poppins500"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/view_all"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/latest_text" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/latest_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:visibility="invisible"
                app:layout_constraintTop_toBottomOf="@id/latest_text"
                tools:itemCount="1"
                tools:listitem="@layout/latest_item" />

            <ProgressBar
                android:id="@+id/latest_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/latest_recycler" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/latest_barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="latest_progress,latest_recycler" />

            <TextView
                android:id="@+id/sale_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="29dp"
                android:fontFamily="@font/poppins500"
                android:text="@string/flash_sale"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/latest_barrier" />

            <TextView
                android:id="@+id/view_all_sale_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/poppins500"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/view_all"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/sale_text" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/sale_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:visibility="invisible"
                app:layout_constraintTop_toBottomOf="@id/sale_text"
                tools:itemCount="1"
                tools:listitem="@layout/sale_item" />

            <ProgressBar
                android:id="@+id/sale_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/sale_recycler" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>